# hunterassesment

./: Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
auth/: Dockerfile  pyproject.toml  server.py
auth/src/: server.py
controller/: Dockerfile  README.md  factory_pb2.py  factory_pb2_grpc.py  pyproject.toml  server.py
controller/src/: server.py
db/: a.sql  dashboard_data.go  schema.go  user.go  user_resource.go
factory/: Dockerfile  README.md  factory.proto  go.mod  go.sum  gqlgen.yml  main.go  resources.json  server.go
factory/graph/: resolver.go  schema.graphqls  schema.resolvers.go
factory/graph/model/: models_gen.go
factory/pb/: factory.pb.go  factory_grpc.pb.go
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src/routes/: +page.svelte
